--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "docker:build": "docker-compose build"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "concurrently": "^8.2.2",
     "prettier": "^3.1.0"
   },
